--- a/index.html
+++ b/index.html
@@ -465,72 +465,9 @@
 	</section>
 </div>
 
-
-
-
-
-	<!--<div class="contacts flex flex-row flex-wrap justify-around width-100">
-		<div class="contact flex flex-column align-center">
-			<span class="icon-phone"></span>
-			<span class="number">18 3351 2122</span>
-			<span class="title">Fixo</span>
-		</div>
-		<a href="mailto:webtal@webtal.com.br" class="contact flex flex-column align-center">
-			<span class="icon-mail"></span>
-			<span class="email">webtal@webtal.com.br</span>
-			<span class="title">Email</span>
-		</a>
-		<div class="contact flex flex-column align-center">
-			<span class="icon-mobile"></span>
-			<span class="number">18 9 9645 0515</span>
-			<span class="title">Vivo</span>
-		</div>
-	</div>
-
-	<h2>Horários de atendimento</h2>
-
-	<style scoped="scoped">
-
-		.office-hours {
-			max-width: 24em;
-			width: 100%;
-		}
-
-		.office-hours .office-hour {
-			border: solid 2px #00bfa5;
-			border-radius: 8px;
-			padding: 1em;
-			margin: 1em 0;
-			text-align: center;
-			cursor: pointer;
-		}
-
-		.office-hours .office-hour span {
-			width: 100%;
-			text-align: center;
-		}
-
-		.office-hours .office-hour .days {
-			font-size: 2.5em;
-		}
-
-	</style>
-
-	<div class="office-hours flex width-100 justify-around flex-wrap">
-		<div class="office-hour flex flex-column align-center hfont-white h-teal-a700">
-			<span class="days">Seg/Sex</span>
-			<span class="hour">08:00 até 18:00</span>
-		</div>
-		<div class="office-hour flex flex-column align-center hfont-white h-teal-a700">
-			<span class="days">Sábado</span>
-			<span class="hour">08:00 até 13:00</span>
-		</div>
-	</div>-->
-
-
 <footer class="block flex justify-around flex-wrap grey-900 font-grey-600 border-grey-600">
 	<div class="about flex flex-column align-center">
-		<span class="address">(18) 3351-2122 / Webtal Telecom, Palmital, SP, CEP 19970-000</span>
+		<span class="address">(18) 3351-2122 / OAI Telecom, Palmital, SP, CEP 19970-000</span>
 		<span class="copyright">©Webtal Telecom 2015</span>
 	</div>
 	<div class="divisor"></div>
