Delete Archives; Customize Footer

--- a/index.html
+++ b/index.html
@@ -192,13 +192,21 @@
 <div id="prices" class="block teal-900 font-white">
 
 	<div class="container">
+
 		<div class="about">
+
 			<h1>Conheça nossos Planos</h1>
+
 			<p class="lead">Para melhor atender nossos clientes, criamos planos de acesso adaptados a cada exigência e necessidade.</p>
+
 		</div>
+
 		<div class="config">
+
 			<span>Consulte a disponibilidade para a sua cidade</span>
+
 		</div>
+
 	</div>
 
 	<div class="wipe" id="prices-wipe">
@@ -247,23 +255,29 @@
 						</li>
 
 						<li class="pricelist hidden-price" data-product-reference="rural">
+
 							<ul class="content">
+
 								<li>
 									<span class="title">1 Mega</span>
 									<span class="description">Upload: 1 MEGA</span>
 								</li>
+
 								<li>
 									<span class="title">2 Mega</span>
 									<span class="description">Upload: 2 MEGA</span>
 								</li>
+
 								<li>
 									<span class="title">4 Mega</span>
 									<span class="description">Upload: 4 MEGA</span>
 								</li>
+
 								<li>
 									<span class="title">+ Planos</span>
 									<span class="description">Consulte-nos</span>
 								</li>
+
 							</ul>
 						</li>
 
@@ -439,14 +453,21 @@
 	<section class="cities-container flex">
 
 		<section class="map-wrapper flex">
+
 			<div id="map-canvas"></div>
+
 		</section>
 
 		<div class="cloud">
+
 			<h1>Cidades Atendidas</h1>
+
 			<p>A OAI possui infra estrutura de ponta em várias cidades da região.</p>
+
 			<p>Confira quais são elas:</p>
+
 			<div class="cloud-wrapper">
+
 				<ul class="cities flex flex-wrap">
 					<li class="tag">Assis</li>
 					<li class="tag">C. Novos Paulista</li>
@@ -460,15 +481,30 @@
 					<li class="tag">Platina</li>
 					<li class="tag">Demais Localidades</li>
 				</ul>
+
 			</div>
+
 		</div>
+
 	</section>
+
 </div>
+
+<style>
+
+	.homologation {
+		margin-top: .5em;
+		margin-bottom: .375em;
+	}
+
+</style>
 
 <footer class="block flex justify-around flex-wrap grey-900 font-grey-600 border-grey-600">
 	<div class="about flex flex-column align-center">
-		<span class="address">(18) 3351-2122 / OAI Telecom, Palmital, SP, CEP 19970-000</span>
-		<span class="copyright">©Webtal Telecom 2015</span>
+		<span class="address"></span>
+		<span class="copyright">©OAI TELECOM 2016</span>
+		<span class="homologation">Empresa Homologada:</span>
+		<figure><a href="http://www.anatel.gov.br/Portal/verificaDocumentos/documento.asp?null&filtro=1&documentoPath=222394.pdf" target="_blank"><img src="dist/img/anatel.png"></a></figure>
 	</div>
 	<div class="divisor"></div>
 	<div class="about flex flex-column align-center">
