--- a/index.html
+++ b/index.html
@@ -1,87 +1,112 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-<head>
-	<meta charset="utf-8"/>
-	<title>Oai Telecom</title>
-	<meta name="viewport"
-	      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
-	<script src="dist/js/villa.min.js"></script>
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="dist/css/villa.min.css"/>
-	<link rel="stylesheet" href="dist/css/mowe.min.css"/>
-	<link rel="stylesheet" href="dist/css/icon.css"/>
-	<link rel="stylesheet" href="css/oai.css"/>
-	<!--[if lt IE 9]>
-	<link rel="stylesheet" type="text/css" href="dist/css/material-colors.css"/>
-	<script src="dist/js/html5shiv.js"></script>
-	<script src="dist/js/html5shiv-printshiv.js"></script>
-	<script src="dist/js/classList.min.js"></script>
-	<![endif]-->
+<html lang="pt-br" class="lato is-loading">
+<meta charset="utf-8"/>
+<title>Oai Telecom</title>
+<meta name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
+<script src="dist/js/villa.min.js"></script>
+<link rel="stylesheet" href="dist/css/villa.min.css"/>
+<link rel="stylesheet" href="dist/css/mowe.css"/>
+<link rel="stylesheet" href="dist/css/icon.css"/>
+<link rel="stylesheet" href="css/oai.css"/>
+<link rel="stylesheet" href="css/transition.css"/>
+<!--[if lt IE 9]>
+<link rel="stylesheet" type="text/css" href="dist/css/material-colors.css"/>
+<script src="dist/js/html5shiv.js"></script>
+<script src="dist/js/html5shiv-printshiv.js"></script>
+<script src="dist/js/classList.min.js"></script>
+<![endif]-->
 
-	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=true">
-	</script>
-	<script type="text/javascript">
-		var map;
-		var centerPos = new google.maps.LatLng(-22.6259642,-50.2902541);
-		var zoomLevel = 10;
-		function initialize() {
-			var mapOptions = {
-				center: centerPos,
-				zoom: zoomLevel,
-				scrollwheel: false,
-			};
-			map = new google.maps.Map( document.getElementById("map-canvas"), mapOptions );
+<script>
 
-			var locations = [
-				['assis', -22.661807,-50.4026562],
-				['cnp', -22.6074217,-50.0168386],
-				['cmota', -22.7444256,-50.4203003],
-				['echapora', -22.4296452,-50.2227159],
-				['ibirarema', -22.8148214,-50.0869049],
-				['nsparecida', -22.9683604,-50.268502],
-				['nalexandria', -22.6985332,-50.3090133],
-				['obressane', -22.3153487,-50.2991],
-				['palmital', -22.7884344,-50.2516319],
-				['platina', -22.6324697,-50.2223892]
-			];
+	setTimeout(function() {
 
-			var image = 'img/icon.png';
+		document.documentElement.classList.remove('is-loading');
 
-			for (i = 0; i < locations.length; i++) {
-				marker = new google.maps.Marker({
-					position: new google.maps.LatLng(locations[i][1], locations[i][2]),
-					title: locations[i][0],
-					map: map,
-					icon: image
-				});
-			}
+	}, 1400);
 
+</script>
+
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=true"></script>
+<script type="text/javascript">
+	var map;
+	var centerPos = new google.maps.LatLng(-22.6259642,-50.2902541);
+	var zoomLevel = 10;
+	function initialize() {
+		var mapOptions = {
+			center: centerPos,
+			zoom: zoomLevel,
+			scrollwheel: false
+		};
+//			map = new google.maps.Map( document.getElementById("map-canvas"), mapOptions );
+
+		var locations = [
+			['assis', -22.661807,-50.4026562],
+			['cnp', -22.6074217,-50.0168386],
+			['cmota', -22.7444256,-50.4203003],
+			['echapora', -22.4296452,-50.2227159],
+			['ibirarema', -22.8148214,-50.0869049],
+			['nsparecida', -22.9683604,-50.268502],
+			['nalexandria', -22.6985332,-50.3090133],
+			['obressane', -22.3153487,-50.2991],
+			['palmital', -22.7884344,-50.2516319],
+			['platina', -22.6324697,-50.2223892]
+		];
+
+		var image = 'img/icon.png';
+
+		for (i = 0; i < locations.length; i++) {
+			marker = new google.maps.Marker({
+				position: new google.maps.LatLng(locations[i][1], locations[i][2]),
+				title: locations[i][0],
+				map: map,
+				icon: image
+			});
 		}
-		google.maps.event.addDomListener(window, 'load', initialize);
 
-	</script>
-</head>
+	}
+	google.maps.event.addDomListener(window, 'load', initialize);
+
+</script>
+
 <body class="navbar-fixed">
+
 <div class="navbar fixed-sm user-unselect">
-	<div class="full wide container">
+	<div class="wide container">
 
 		<header class="bg-sm">
 
 			<div class="item">
 
-				<a class="brand" href="#">
-					<img src="dist/img/oai.png" alt="Oai Telecom"/>
-				</a>
+				<style type="text/css">
+					.OaiLogoSymbol-green{fill:#CDDC37;}
+					.OaiLogoSymbol-blue{fill:#38A4DD;}
+					.OaiLogoType{fill:#212121;}
+				</style>
 
-				<!--<a class="logo font-grey-700" href="#">
-					<svg id="bg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000">
-						<g>
-							<path d="M332,203.5c151.6,163.9,151.6,429.1,0,592.9"></path>
-							<path d="M403.5,111.8c199.7,214.6,199.7,561.9,0,776.5"></path>
-							<path d="M468,20c266.7,265.3,266.7,694.7,0,960"></path>
+				<a href="#" class="brand">
+
+					<svg version="1.1" id="OaiLogo" x="0px" y="0px" viewBox="194 640 1000 431.9" style="enable-background:new 194 640 1000 431.9;">
+
+						<g id="OaiLogoSymbol">
+
+							<path id="OaiLogoSymbol-green" class="OaiLogoSymbol-green" d="M716.2,643c-1.1-0.7-1.2-2.3,0.7-3h26c79.8-0.4,294.3,109.5,319.1,205.1c3,12.3,12.5,24.1,17.7,37c0.4,1,25.4,58.6,25.4,69.6c0,4-6.5,8.5-8.5,12H1057c-11.7-39.3-30.9-78.8-66.1-119.4c-17.2-28.8-46.8-60.1-74.6-85.3c-29.2-26.5-58.8-38.8-92.8-65.8C786,669.2,749.3,652.2,716.2,643z M1075.6,881.8c0,0,5.5,11.7,0.8,1.9L1075.6,881.8z"/>
+							<path id="OaiLogoSymbol-blue" class="OaiLogoSymbol-blue" d="M1193.1,910.9c0.8-0.4,1.5,0.8,1.3,2.3l-9.6,16.6c-28.1,53.4-177.5,157.5-250,140.2c-9.3-2.4-20.6-0.2-31-1.3c-0.7-0.1-48.1-3.8-55.5-7.7c-2.7-1.4-3.3-7.4-5-9.9l14.1-26.5c44.6,12.6,75.2,1.3,128.4-7c32.4-7.7,64.6-12.6,95.3-32.8c21.5-9.7,46.7-21,59.8-32.2C1161.5,939.4,1179.4,925.3,1193.1,910.9z"/>
+
 						</g>
+
+						<g id="OaiLogoType">
+
+							<path id="OaiLogoType-title" class="OaiLogoType" d="M357.9,834.3c-40,0-82.3,28.6-82.3,76.8c0,4.6,32.6,79,58.4,79h25.8c38.4,0,69.3-46.1,69.3-75.7C429.1,879.3,408.6,834.3,357.9,834.3z M356.7,790.4c66.1,0,116.3,62.3,116.3,116.3c0,65.9-55.1,120.7-119.6,120.7c-49.7,0-121.7-61.7-121.7-113C231.7,851.9,298.3,790.4,356.7,790.4z M761.6,731.5c30.6,0.8,25.4,7,39.2,0.1v41h-39.3C759.6,758.8,759.6,745.3,761.6,731.5z M613.5,790.4c21.9,0,114.1,25.5,113.9,73.8v156.3H686V868c-0.1-36.2-66.8-40.3-77-40.3c-37.8,0-76.8,54.3-76.8,79c0,42.6,47,83.4,83.4,83.4c5.5,0,35.8-8.7,54.7-15.2v16c0.2,6.4-2.2,36.5-14.4,36.5h-80.6c-53.2,0-80.3-91.3-80.3-116.3C495,839.8,548.5,790.4,613.5,790.4z M762.1,799.5h36.6v221h-36.6V799.5z"/>
+							<path id="OaiLogoType-r" class="OaiLogoType" d="M197.5,800.3c0,10.8,8.7,19.4,19.5,19.4c10.8,0,19.4-8.7,19.4-19.4s-8.7-19.5-19.4-19.5S197.5,789.5,197.5,800.3z M193.5,800.3c0-12.9,10.5-23.5,23.5-23.5s23.4,10.5,23.4,23.5s-10.5,23.5-23.4,23.5C204.1,823.8,193.5,813.2,193.5,800.3z M222.6,793.4c0-0.8-0.1-1.6-0.4-2.2c-0.3-0.7-0.7-1.2-1.4-1.6c-0.6-0.4-1.3-0.7-2-0.8c-0.7-0.1-1.6-0.2-2.7-0.2h-4.6v11h3.9c1.3,0,2.3-0.1,3.2-0.4c0.9-0.2,1.6-0.6,2.3-1.2c0.6-0.5,1-1.1,1.3-1.9C222.4,795.4,222.6,794.5,222.6,793.4z M229.9,814.2h-5l-8-11.5h-5.5v11.5h-3.8v-28.9h8.1c1.8,0,3.2,0.1,4.4,0.4c1.1,0.2,2.2,0.6,3.1,1.2c1,0.7,1.9,1.5,2.5,2.5c0.6,1,0.9,2.3,0.9,3.8c0,2.1-0.5,3.9-1.6,5.3c-1,1.3-2.5,2.5-4.3,3.1L229.9,814.2z"/>
+
+						</g>
+
 					</svg>
-				</a>-->
+
+					<span class="slogan">navegar é preciso</span>
+
+				</a>
 
 			</div>
 
@@ -101,21 +126,25 @@
 
 		<footer>
 
-			<div class="menu bg-sm font-white">
+			<div class="menu bg-sm font-grey-500">
 				<div class="item">
-					<a class="link hfont-green-200" href="#about">Sobre</a>
+					<a href="#about" class="link hfont-grey-400">Sobre</a>
 				</div>
 				<div class="item">
-					<a class="link hfont-green-200" href="#prices">Planos</a>
+					<a href="#prices" class="link hfont-grey-400">Planos</a>
 				</div>
 				<div class="item">
-					<a class="link hfont-green-200" href="#cities">Cidades</a>
+					<a href="#cities" class="link hfont-grey-400">Cidades</a>
 				</div>
 				<div class="item">
-					<a class="link hfont-green-200" href="#contact">Contato</a>
+					<a href="#contact" class="link font-light-blue-a400 hfont-light-blue-a200">
+						<strong>Contato</strong>
+					</a>
 				</div>
-				<div class="item light-green-800">
-					<a class="link hfont-green-200" href="https://oai.com.br/mail/" target="_blank">Webmail</a>
+				<div class="item font-light-blue-a400">
+					<a href="https://oai.com.br/mail/" class="link link--button h-light-blue-a400 hborder-light-blue-a400 hfont-white">
+						<strong>Webmail</strong>
+					</a>
 				</div>
 			</div>
 
@@ -125,28 +154,53 @@
 	</div>
 </div>
 
-<div class="hero green-300 bg-cover font-white height-window" height-offset="0">
+<div class="hero font-white">
 
 	<style scoped="scoped">
-		.hero {
-			background-image: url('dist/img/landscape05.jpg');
-			background-position: center;
+		.hero-background {
+			background-image: url('dist/img/photo-1452457750107-cd084dce177d.jpeg');
+			background-position: 50% 72%;
+		}
+
+		.hero-overlay {
+			background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,48) 12%, transparent 24%, transparent 36%, rgba(0,0,0,0.48) 100%);
+			background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(255,255,255,48) 12%, transparent 24%, transparent 36%, rgba(0,0,0,0.48) 100%);
 		}
 	</style>
 
-	<div class="wide container flex flex-wrap">
+	<div class="hero-background bg-cover">
 
-		<div class="welcome grow-3">
-			<h1>Bem vindo à<br/><strong>OAI Telecom</strong>!</h1>
-		</div>
+		<div class="hero-overlay"></div>
 
-		<div class="promo grow-1 font-grey-50">
-			<div id="promo01">
-				<p>
-					<span class="small">A operadora original, autêntica e interativa</span>
-				</p>
+	</div>
+
+	<div class="hero-inner">
+
+		<div class="full wide container flex flex-column flex-wrap justify-center">
+
+			<div class="welcome">
+
+				<h1>
+
+					<span class="text"><strong>OAI Telecom</strong></span>
+
+				</h1>
+
+				<span class="horizontal-bar"></span>
+
+				<p>A operadora original, autêntica e interativa</p>
+
 			</div>
-			<a href="#" id="prices-scroll" class="btn">Conheça nossos planos</a>
+
+			<!--<div class="promo grow-1 font-grey-50">-->
+			<!--<div id="promo01">-->
+			<!--<p>-->
+			<!--<span class="small">A operadora original, autêntica e interativa</span>-->
+			<!--</p>-->
+			<!--</div>-->
+			<!--<a href="#" id="prices-scroll" class="btn">Conheça nossos planos</a>-->
+			<!--</div>-->
+
 		</div>
 
 	</div>
@@ -158,13 +212,12 @@
 		<div>
 
 			<h1>Nossa história</h1>
+
 			<p>O que vêm a sua cabeça quando você ouve a palavra Internet ?</p>
 
-			<p>Para muitos, informação, para outros, trabalho, diversão, cultura e conhecimento. Para nós da OAI, a internet aproxima as pessoas, como nenhum outro meio de COMUNICAÇÃO, derrubando fronteiras e barreiras, com a liberdade de criar, se expressar e aparecer para o mundo, revelando maravilhas em pessoas comuns.
-			</p>
+			<p>Para muitos, informação, para outros, trabalho, diversão, cultura e conhecimento. Para nós da OAI, a internet aproxima as pessoas, como nenhum outro meio de COMUNICAÇÃO, derrubando fronteiras e barreiras, com a liberdade de criar, se expressar e aparecer para o mundo, revelando maravilhas em pessoas comuns.</p>
 
-			<p>É com essa motivação que trabalhamos a cada dia, inovando e expandindo para atender todo o potencial que nossos clientes e colaboradores têm a oferecer, com serviços de acesso à internet banda larga, hospedagem de sites, desenvolvimento de sites, redes wireless e voip, conectando o mundo e aproximando pessoas.
-			</p>
+			<p>É com essa motivação que trabalhamos a cada dia, inovando e expandindo para atender todo o potencial que nossos clientes e colaboradores têm a oferecer, com serviços de acesso à internet banda larga, hospedagem de sites, desenvolvimento de sites, redes wireless e voip, conectando o mundo e aproximando pessoas.</p>
 
 		</div>
 
@@ -176,14 +229,11 @@
 
 		<div class="history">
 
-			<p>Fundada em 2004, a OAI atende a milhares de clientes em todo o Brasil, fornecendo serviços ao mercado residencial e corporativo, com um atendimento exclusivo e tecnologia de ponta.
-			</p>
+			<p>Fundada em 2004, a OAI atende a milhares de clientes em todo o Brasil, fornecendo serviços ao mercado residencial e corporativo, com um atendimento exclusivo e tecnologia de ponta.</p>
 
-			<p>Com constantes investimentos, a OAI amplia suas fronteiras a cada dia. Contamos com uma infra-estrutura própria, provendo acesso à Internet rápida via Rádio nas cidades de Assis, Echaporã e Oscar Bressane no estado de São Paulo e ADSL para todo o Brasil.
-			</p>
+			<p>Com constantes investimentos, a OAI amplia suas fronteiras a cada dia. Contamos com uma infra-estrutura própria, provendo acesso à Internet rápida via Rádio nas cidades de Assis, Echaporã e Oscar Bressane no estado de São Paulo e ADSL para todo o Brasil.</p>
 
-			<p>Chegamos então à era da velocidade da luz, graças à implantação das redes de fibra óptica que chegam a cada endereço para oferecer o melhor serviço e garantir a velocidade ideal e necessária a cada cliente.
-			</p>
+			<p>Chegamos então à era da velocidade da luz, graças à implantação das redes de fibra óptica que chegam a cada endereço para oferecer o melhor serviço e garantir a velocidade ideal e necessária a cada cliente.</p>
 
 		</div>
 
