Improve the navbar and hero styles

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 					</a>
 				</div>
 				<div class="item font-light-blue-a400">
-					<a href="https://oai.com.br/mail/" class="link link--button h-light-blue-a400 hborder-light-blue-a400 hfont-white">
+					<a href="https://oai.com.br/mail/" class="link link--button">
 						<strong>Webmail</strong>
 					</a>
 				</div>
@@ -157,15 +157,17 @@
 <div class="hero font-white">
 
 	<style scoped="scoped">
+
 		.hero-background {
 			background-image: url('dist/img/photo-1452457750107-cd084dce177d.jpeg');
-			background-position: 50% 72%;
+			background-position: center 72%;
 		}
 
 		.hero-overlay {
-			background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,48) 12%, transparent 24%, transparent 36%, rgba(0,0,0,0.48) 100%);
-			background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(255,255,255,48) 12%, transparent 24%, transparent 36%, rgba(0,0,0,0.48) 100%);
+			background: -webkit-linear-gradient(top, rgba(255,255,255,1) 10%, rgba(255,255,255,.6) 18%, transparent 36%, rgba(0,0,0,0.48) 100%);
+			background: linear-gradient(to bottom, rgba(255,255,255,1) 10%, rgba(255,255,255,.6) 18%, transparent 36%, rgba(0,0,0,0.48) 100%);
 		}
+
 	</style>
 
 	<div class="hero-background bg-cover">
@@ -207,13 +209,13 @@
 
 </div>
 
-	<div class="container">
+<div class="container">
 
-		<div>
+	<div class="text">
 
-			<h1>Nossa história</h1>
+		<div class="text-intro">
 
-			<p>O que vêm a sua cabeça quando você ouve a palavra Internet ?</p>
+			<h2>O que vêm a sua cabeça quando você ouve a palavra Internet ?</h2>
 
 			<p>Para muitos, informação, para outros, trabalho, diversão, cultura e conhecimento. Para nós da OAI, a internet aproxima as pessoas, como nenhum outro meio de COMUNICAÇÃO, derrubando fronteiras e barreiras, com a liberdade de criar, se expressar e aparecer para o mundo, revelando maravilhas em pessoas comuns.</p>
 
@@ -223,21 +225,27 @@
 
 	</div>
 
-	<span class="full-wide bg-cover photo"></span>
+</div>
 
-	<div class="container">
+<span class="full-wide bg-cover photo"></span>
 
-		<div class="history">
+<div class="container">
 
-			<p>Fundada em 2004, a OAI atende a milhares de clientes em todo o Brasil, fornecendo serviços ao mercado residencial e corporativo, com um atendimento exclusivo e tecnologia de ponta.</p>
+	<div class="text">
 
-			<p>Com constantes investimentos, a OAI amplia suas fronteiras a cada dia. Contamos com uma infra-estrutura própria, provendo acesso à Internet rápida via Rádio nas cidades de Assis, Echaporã e Oscar Bressane no estado de São Paulo e ADSL para todo o Brasil.</p>
+		<div class="text-history">
+
+			<h2>Nossa história</h2>
+
+			<p>Fundada em 2004, a OAI atende a milhares de clientes em todo o Brasil, fornecendo serviços ao mercado residencial e corporativo, com um atendimento exclusivo e tecnologia de ponta. Com constantes investimentos, a OAI amplia suas fronteiras a cada dia. Contamos com uma infra-estrutura própria, provendo acesso à Internet rápida via Rádio nas cidades de Assis, Echaporã e Oscar Bressane no estado de São Paulo e ADSL para todo o Brasil.</p>
 
 			<p>Chegamos então à era da velocidade da luz, graças à implantação das redes de fibra óptica que chegam a cada endereço para oferecer o melhor serviço e garantir a velocidade ideal e necessária a cada cliente.</p>
 
 		</div>
 
 	</div>
+
+</div>
 
 <div id="prices" class="block teal-900 font-white">
 
