Improve the navbar and hero styles

--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
 		}
 
 		* {
-			text-align: center;
+			/*text-align: center;*/
 		}
 	</style>
 
@@ -469,7 +469,7 @@
 
 		}
 
-/*======Container======*/
+/* Container */
 
 		.cities-container {
 			background-color: #eeeeee;
