--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br" class="lato is-loading">
 <meta charset="utf-8"/>
-<title>Oai Telecom</title>
+<title>OAI Telecom</title>
 <meta name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"/>
 <script src="dist/js/villa.min.js"></script>
 <link rel="stylesheet" href="dist/css/villa.min.css"/>
 <link rel="stylesheet" href="dist/css/mowe.css"/>
 <link rel="stylesheet" href="dist/css/icon.css"/>
-<link rel="stylesheet" href="css/oai.css"/>
+<link rel="stylesheet" href="css/navbar.css"/>
+<link rel="stylesheet" href="css/hero.css"/>
+<link rel="stylesheet" href="css/pricelist.css"/>
 <link rel="stylesheet" href="css/transition.css"/>
+<link rel="stylesheet" href="css/oai.css"/>
 <!--[if lt IE 9]>
 <link rel="stylesheet" type="text/css" href="dist/css/material-colors.css"/>
 <script src="dist/js/html5shiv.js"></script>
@@ -71,7 +74,7 @@
 
 <body class="navbar-fixed">
 
-<div class="navbar fixed-sm user-unselect">
+<div class="navbar user-unselect">
 	<div class="wide container">
 
 		<header class="bg-sm">
@@ -247,7 +250,7 @@
 
 </div>
 
-<div id="prices" class="block teal-900 font-white">
+<div id="prices" class="block light-blue-600 font-white">
 
 	<div class="container">
 
@@ -256,12 +259,6 @@
 			<h1>Conheça nossos Planos</h1>
 
 			<p class="lead">Para melhor atender nossos clientes, criamos planos de acesso adaptados a cada exigência e necessidade.</p>
-
-		</div>
-
-		<div class="config">
-
-			<span>Consulte a disponibilidade para a sua cidade</span>
 
 		</div>
 
@@ -305,10 +302,6 @@
 									<span class="title">10 MB</span>
 									<span class="description">Upload: 10 MEGA</span>
 								</li>
-								<li>
-									<span class="title"> + planos</span>
-									<span class="description">Consulte-nos</span>
-								</li>
 							</ul>
 						</li>
 
@@ -331,20 +324,11 @@
 									<span class="description">Upload: 4 MEGA</span>
 								</li>
 
-								<li>
-									<span class="title">+ Planos</span>
-									<span class="description">Consulte-nos</span>
-								</li>
-
 							</ul>
 						</li>
 
 						<li class="pricelist hidden-price" data-product-reference="empresarial">
 							<ul class="content">
-								<li>
-									<span class="title">1 Mega</span>
-									<span class="description">Upload: 1 MEGA</span>
-								</li>
 								<li>
 									<span class="title">2 Mega</span>
 									<span class="description">Upload: 2 MEGA</span>
@@ -354,8 +338,8 @@
 									<span class="description">Upload: 4 MEGA</span>
 								</li>
 								<li>
-									<span class="title">+ planos</span>
-									<span class="description">Consulte-nos</span>
+									<span class="title">10 Mega</span>
+									<span class="description">Upload: 10 MEGA</span>
 								</li>
 							</ul>
 						</li>
@@ -369,6 +353,17 @@
 		</div>
 
 	</div>
+
+	<div class="prices-more">
+
+		<a class="prices-more-select-area">
+
+			<span>Entre em contato para obter planos exclusivos!</span>
+
+		</a>
+
+	</div>
+
 </div>
 
 	<style>
@@ -398,7 +393,6 @@
 			background-color: #004d40;
 			width: 53em;
 		}
-
 
 		/*** NUVEM DE TAGS ***/
 
