--- a/city.html
+++ b/city.html
@@ -9,8 +9,8 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="dist/css/villa.min.css"/>
     <link rel="stylesheet" href="dist/css/mowe.min.css"/>
-    <link rel="stylesheet" href="dist/css/icon.css"/>
-    <link rel="stylesheet" href="css/oai.css"/>
+    <link rel="stylesheet" href="css/icon.css"/>
+    <link rel="stylesheet" href="css/z_oai.css"/>
     <!--[if lt IE 9]>
     <link rel="stylesheet" type="text/css" href="dist/css/material-colors.css"/>
     <script src="dist/js/html5shiv.js"></script>
@@ -95,7 +95,7 @@
 
 
         <div class="cities flex flex-column align-center">
-            <span class="icon-location flex align-center"></span>
+        <span class="icon-location flex align-center"></span>
             <span class="city-name flex">ASSIS</span>
             <div class="address flex align-center">
                 <span class="street">Cap. Francisco R. Garcia, 153</span>
