--- a/header.html
+++ b/header.html
@@ -9,7 +9,7 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="dist/css/villa.min.css"/>
     <link rel="stylesheet" href="dist/css/mowe.min.css"/>
-    <link rel="stylesheet" href="css/oai.css"/>
+    <link rel="stylesheet" href="css/z_oai.css"/>
     <!--[if lt IE 9]>
     <link rel="stylesheet" type="text/css" href="dist/css/material-colors.css"/>
     <script src="dist/js/html5shiv.js"></script>
