Finish first version Add gulp server

--- a/index.html
+++ b/index.html
@@ -256,9 +256,9 @@
 
 </div>
 
-<div id="planos" class="block light-blue-600 font-white">
+<div id="prices" class="block light-blue-600 font-white">
 
-	<div class="container">
+	<div id="planos" class="container">
 
 		<div class="about">
 
