--- a/teste.html
+++ b/teste.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="dist/css/villa.min.css"/>
     <link rel="stylesheet" href="dist/css/mowe.min.css"/>
     <link rel="stylesheet" href="css/icon.css"/>
-    <link rel="stylesheet" href="css/z_oai.css"/>
+    <link rel="stylesheet" href="css/z_custom.css"/>
     <!--[if lt IE 9]>
     <link rel="stylesheet" type="text/css" href="dist/css/material-colors.css"/>
     <script src="dist/js/html5shiv.js"></script>
