--- a/index.html
+++ b/index.html
@@ -63,12 +63,18 @@
 			});
 		}
 
-		var style = [{"featureType":"administrative","elementType":"labels.text.fill","stylers":[{"color":"#444444"}]},{"featureType":"landscape","elementType":"all","stylers":[{"color":"#f2f2f2"}]},{"featureType":"poi","elementType":"all","stylers":[{"visibility":"off"}]},{"featureType":"road","elementType":"all","stylers":[{"saturation":-100},{"lightness":45}]},{"featureType":"road.highway","elementType":"all","stylers":[{"visibility":"simplified"}]},{"featureType":"road.arterial","elementType":"labels.icon","stylers":[{"visibility":"off"}]},{"featureType":"transit","elementType":"all","stylers":[{"visibility":"off"}]},{"featureType":"water","elementType":"all","stylers":[{"color":"#03a9f4"},{"visibility":"on"}]}];
+		var style = [{"featureType":"administrative","elementType":"labels.text.fill","stylers":[{"color":"#444444"}]},{"featureType":"landscape","elementType":"all","stylers":[{"color":"#f5f5f5"}]},{"featureType":"poi","elementType":"all","stylers":[{"visibility":"off"}]},{"featureType":"road","elementType":"all","stylers":[{"saturation":-100},{"lightness":45}]},{"featureType":"road.highway","elementType":"all","stylers":[{"visibility":"simplified"}]},{"featureType":"road.arterial","elementType":"labels.icon","stylers":[{"visibility":"off"}]},{"featureType":"transit","elementType":"all","stylers":[{"visibility":"off"}]},{"featureType":"water","elementType":"all","stylers":[{"color":"#03a9f4"},{"visibility":"on"}]}];
 
 		map.setOptions({styles: style});
 
 	}
 	google.maps.event.addDomListener(window, 'load', initialize);
+
+	setTimeout(function() {
+
+		map.setCenter(new google.maps.LatLng(-22.689642,-50.362541));
+
+	}, 3000)
 
 </script>
 
@@ -197,15 +203,6 @@
 
 			</div>
 
-			<!--<div class="promo grow-1 font-grey-50">-->
-			<!--<div id="promo01">-->
-			<!--<p>-->
-			<!--<span class="small">A operadora original, autêntica e interativa</span>-->
-			<!--</p>-->
-			<!--</div>-->
-			<!--<a href="#" id="prices-scroll" class="btn">Conheça nossos planos</a>-->
-			<!--</div>-->
-
 		</div>
 
 	</div>
@@ -218,7 +215,7 @@
 
 </div>
 
-<div id="sobre" class="text grey-100">
+<div id="sobre" class="text grey-100 font-grey-800">
 
 	<div class="text-background text-background--intro">
 
@@ -248,7 +245,7 @@
 
 <span class="full-wide bg-cover photo"></span>
 
-<div class="text">
+<div class="text font-grey-800">
 
 	<div class="container">
 
@@ -382,7 +379,7 @@
 
 </div>
 
-<article id="cities-block" class="CitiesBlock">
+<article id="cities-block" class="CitiesBlock grey-100">
 
 	<h2 class="font-light-blue-a700">Cidades Atendidas</h2>
 
@@ -408,61 +405,61 @@
 
 					<li class="CitiesItem">
 
-						<a class="CitiesItem-select-area">Assis</a>
+						<a class="CitiesItem-select-area" data-mapLat="-22.661807" data-mapLng="-50.4026562">Assis</a>
 
 					</li>
 
 					<li class="CitiesItem">
 
-						<a class="CitiesItem-select-area">C. Novos Paulista</a>
+						<a class="CitiesItem-select-area" data-mapLat="-22.6074217" data-mapLng="-50.0168386">C. Novos Paulista</a>
 
 					</li>
 
 					<li class="CitiesItem">
 
-						<a class="CitiesItem-select-area">Cândido Mota</a>
+						<a class="CitiesItem-select-area" data-mapLat="-22.7444256" data-mapLng="-50.4203003">Cândido Mota</a>
 
 					</li>
 
 					<li class="CitiesItem">
 
-						<a class="CitiesItem-select-area">Echaporã</a>
+						<a class="CitiesItem-select-area" data-mapLat="-22.4296452" data-mapLng="-50.2227159">Echaporã</a>
 
 					</li>
 
 					<li class="CitiesItem">
 
-						<a class="CitiesItem-select-area">Ibirarema</a>
+						<a class="CitiesItem-select-area" data-mapLat="-22.8148214" data-mapLng="-50.0869049">Ibirarema</a>
 
 					</li>
 
 					<li class="CitiesItem">
 
-						<a class="CitiesItem-select-area">Nossa Sra Aparecida</a>
+						<a class="CitiesItem-select-area" data-mapLat="-22.9683604" data-mapLng="-50.268502">Nossa Sra Aparecida</a>
 
 					</li>
 
 					<li class="CitiesItem">
 
-						<a class="CitiesItem-select-area">Nova Alexandria</a>
+						<a class="CitiesItem-select-area" data-mapLat="-22.6985332" data-mapLng="-50.3090133">Nova Alexandria</a>
 
 					</li>
 
 					<li class="CitiesItem">
 
-						<a class="CitiesItem-select-area">Oscar Bressane</a>
+						<a class="CitiesItem-select-area" data-mapLat="-22.3153487" data-mapLng="-50.2991">Oscar Bressane</a>
 
 					</li>
 
 					<li class="CitiesItem">
 
-						<a class="CitiesItem-select-area">Palmital</a>
+						<a class="CitiesItem-select-area" data-mapLat="-22.7884344" data-mapLng="-50.2516319">Palmital</a>
 
 					</li>
 
 					<li class="CitiesItem">
 
-						<a class="CitiesItem-select-area">Platina</a>
+						<a class="CitiesItem-select-area" data-mapLat="-22.6324697" data-mapLng="-50.2223892">Platina</a>
 
 					</li>
 
@@ -565,244 +562,22 @@
 
 	webmailButton.addEventListener('click', function(ev) {
 
-		ev.preventDefault();
-
-		alert('hehe');
+//		ev.preventDefault();
 
 	}, false);
 
-</script>
+	var cities = document.querySelectorAll('.CitiesItem-select-area');
 
-<script>
+	for (var i  = cities.length; i--; )
+		cities[i].addEventListener('click', function() {
 
-	var _emailService = 'site@webtal.com.br';
-	//_emailService = 'eduardo@kabanas.info';
-	var _emailServiceURL = 'http://mailman.letsmowe.com/wtal/';
-	var emailServiceCount = 4;
-	var emailServiceClickCount = 8;
+			var lat = parseFloat(this.dataset.maplat) || false;
+			var lng = parseFloat(this.dataset.maplng) || false;
 
-	/**
-	 * Set the margin of ruler element
-	 * @param a target element (ruler)
-	 * @param n number of nodes
-	 */
-	var citySetMargin;
-	citySetMargin = function(a, n) {
-		a.style.marginLeft = n * 100 + '%';
-	};
+			if (lat && lng)
+				map.setCenter(new google.maps.LatLng({lat: lat, lng: lng}));
 
-	/**
-	 * Set the class based on value
-	 * @param a event target
-	 * @param b target element (ruler)
-	 * @param v value
-	 */
-	var citySetClass;
-	citySetClass = function(a, b, v) {
-		for (var i = a.length; i--; )
-			b.classList.remove(a[i].value);
-		b.classList.add(v);
-	};
-
-	/**
-	 * Get the node index
-	 * @param a event target
-	 * @param v value
-	 * return int
-	 */
-	var cityGetIndex;
-	cityGetIndex = function(a, v) {
-		for (var i = a.length; i--; )
-			if (a[i].value == v)
-				return -i;
-		return 0;
-	};
-
-	/**
-	 * Do the distinct
-	 * @param a event target
-	 * @param b target element (ruler)
-	 */
-	var doCityDistinct;
-	doCityDistinct = function(a, b) {
-		var n, v;
-
-		v = a.value;
-		n = cityGetIndex(a.children, v);
-
-		citySetClass(a.children, b, v);
-		citySetMargin(b, n);
-	};
-
-	/**
-	 * Handler the functions to init the distinct
-	 */
-	var cityHandler;
-	cityHandler = function() {
-		doCityDistinct(this, this.b);
-	};
-
-	/**
-	 * Add event listener to element
-	 * @param a element
-	 * @param b target element (ruler)
-	 */
-	function distinctCity (a, b) {
-		a.addEventListener('change', cityHandler, false);
-		a.b = b;
-		doCityDistinct(a, b);
-	}
-
-	/**
-	 * Wipe Lib Venus
-	 */
-	function doWipe(a) {
-		for (var i = a.length; i--; )
-			a[i].style.width = a[i].getElementsByClassName('frame').length * 100 + '%';
-	}
-
-	var callDistinct;
-	callDistinct = function() {
-		var a, b, i;
-		a = document.getElementById('city');
-		b = document.getElementById('prices-wipe');
-		for (i = a.length; i--; )
-			if (a[i].value == this.value)
-				a[i].selected = true;
-		doCityDistinct(a, b);
-		var m = document.getElementsByClassName('modal-container');
-		for (i = m.length; i--; )
-			m[i].classList.remove('open');
-	};
-
-	var buildCityList;
-	buildCityList = function() {
-		var a = document.getElementById('citylist');
-		var c = document.getElementById('city').getElementsByTagName('option');
-		var e = document.createElement('div');
-		e.classList.add('container');
-		var n = c.length;
-		for (var i = 0; i < n; i++) {
-
-			var d = document.createElement('div');
-			var ea = document.createElement('button');
-			ea.classList.add('city');
-			ea.addEventListener('click', callDistinct, false);
-			ea.setAttribute('value', c[i].value);
-
-			var eaa = document.createTextNode(c[i].innerHTML);
-
-			ea.appendChild(eaa);
-			d.appendChild(ea);
-			e.appendChild(d);
-		}
-		a.insertBefore(e, a.lastChild);
-	};
-
-	var city = document.getElementById('city');
-	var pricesWipe = document.getElementById('prices-wipe');
-	distinctCity(city, pricesWipe);
-
-	var wipelist = document.getElementsByClassName('wipe');
-	doWipe(wipelist);
-
-	buildCityList();
-
-	var g = document.getElementById('citylist').getElementsByTagName('button')[0];
-	g.focus();
-
-	/* CONTACT FUNCTIONS START HERE */
-
-	var minifyAllForms = function() {
-		var b = document.querySelectorAll('.pricelist .content > li');
-		for (var i = b.length; i--; )
-			minifyForm(b[i]);
-	};
-
-	var minifyForm = function(a) {
-		a.classList.remove('error');
-		a.classList.remove('success');
-		a.classList.remove('active');
-	};
-
-	/**
-	 * Handler of send button to calls the sendResponse function
-	 */
-	var toggleForm;
-	toggleForm = function() {
-
-		var a = this.parentNode;
-
-		if ((a.classList.contains('error')) || (a.classList.contains('success'))) {
-			minifyForm(a);
-		} else {
-			if (a.classList.contains('active')) {
-				a.classList.remove('active');
-			} else {
-				minifyAllForms();
-				a.classList.add('active');
-				a.querySelectorAll('[name=name]')[0].focus();
-			}
-
-		}
-
-	};
-
-	var buildForm;
-	buildForm = function(e) {
-		var link = document.createElement('a');
-		link.setAttribute('class', 'action user-unselect cursor-pointer toggle-contact-form');
-
-		var inputName = document.createElement('input');
-		inputName.type = 'text';
-		inputName.setAttribute('class', 'contact-form');
-		inputName.setAttribute('name', 'name');
-		inputName.setAttribute('placeholder', 'Nome');
-		inputName.setAttribute('autocomplete', 'off');
-
-		var inputPhone = document.createElement('input');
-		inputPhone.type = 'tel';
-		inputPhone.setAttribute('class', 'contact-form');
-		inputPhone.setAttribute('name', 'phone');
-		inputPhone.setAttribute('placeholder', 'Telefone (apenas números)');
-		inputPhone.setAttribute('autocomplete', 'off');
-
-		var inputSubmit = document.createElement('a');
-		inputSubmit.setAttribute('class', 'contact-form action response-send user-unselect cursor-pointer');
-
-		var submitAlert = document.createElement('span');
-		submitAlert.classList.add('alert');
-
-		e.appendChild(link);
-		e.appendChild(inputName);
-		e.appendChild(inputPhone);
-		e.appendChild(inputSubmit);
-		e.appendChild(submitAlert);
-	};
-
-	/**
-	 * Append the form and add the lister events
-	 */
-	var appendForm;
-	appendForm = function() {
-		var i;
-
-		var pricelistItems = document.querySelectorAll('.pricelist .content > li');
-
-		for (i = pricelistItems.length; i--; ) {
-			var item = pricelistItems[i];
-			buildForm(item);
-		}
-
-		var toggleFormBtn = document.getElementsByClassName('toggle-contact-form');
-
-		for (i = toggleFormBtn.length; i--; )
-			toggleFormBtn[i].addEventListener('click', toggleForm);
-	};
-
-	appendForm();
-
-	/* CONTACT FUNCTIONS ENDS HERE */
+		});
 
 </script>
 
@@ -810,87 +585,6 @@
 <script src="dist/js/dist.min.js"></script>
 
 <script>
-
-	/* CONTACT FUNCTIONS START HERE */
-
-	var setSubmitAlert = function(a, b) {
-		a.classList.remove('active');
-		a.classList.remove('sent');
-		a.classList.add(b);
-	};
-
-	var sendResponse = function(a, c) {
-		console.log(c);
-		/*emailServiceCount--;
-		setSubmitAlert(a, 'success');*/
-		$.ajax({
-			cache: false,
-			data: c,
-			crossDomain: true,
-			beforeSend: function() {
-				a.classList.add('sent');
-			},
-			error: function(data) {
-//				setSubmitAlert(a, 'error');
-//				TODO - temporary function to fix bug of Cors
-				setSubmitAlert(a, 'success');
-			},
-			success: function(data) {
-				setSubmitAlert(a, 'success');
-				emailServiceCount--;
-			},
-			url: _emailServiceURL
-		});
-	};
-
-	/**
-	 * Load and send the response
-	 */
-	var ctrlResponse;
-	ctrlResponse = function() {
-		var a = this.parentNode;
-		console.log();
-		var aa = a.querySelectorAll('[name=name]')[0].value;
-		var ab = a.querySelectorAll('[name=phone]')[0].value;
-		var ac = document.getElementById('city').value;
-
-		// Test number of clicks to request (MAX = 4)
-		if (emailServiceClickCount > 0) {
-
-			// Test if fields are null
-			if ((aa.length > 0) && (ab.length > 0)) {
-				emailServiceClickCount--;
-				var b = a.parentNode.parentNode;
-				var	c = {
-					city: ac,
-					name: aa,
-					phone: ab,
-					product: a.querySelectorAll('.title')[0].innerHTML,
-					reference: b.getAttribute('data-product-reference'),
-					mail: _emailService
-				};
-				// Test number of requests (MAX = 4)
-				if (emailServiceCount > 0) {
-					sendResponse(a, c);
-				} else {
-					a.classList.remove('active');
-					a.classList.add('error');
-				}
-			} else {
-				alert('Campos vazios');
-			}
-		} else {
-			a.classList.remove('active');
-			a.classList.add('error');
-		}
-	};
-
-	var sendBtn = document.getElementsByClassName('response-send');
-
-	for (i = sendBtn.length; i--; )
-		sendBtn[i].addEventListener('click', ctrlResponse);
-
-	/* CONTACT FUNCTIONS ENDS HERE */
 
 	window.onload = function () {
 
@@ -903,24 +597,7 @@
 
 	};
 
-	$('#prices-scroll').click(function () {
-		$("html, body").animate({
-					scrollTop: $('#prices').offset().top
-				}, '1200'
-		);
-	});
 
-	$('.wow').click(function () {
-		if (!$(this).hasClass('show')) {
-			$(this).addClass('show');
-		} else {
-			$(this).removeClass('show');
-		}
-	});
-
-	$('.navbar header .toggle').click(function () {
-		$(this).closest('.navbar').find('.menu').toggleClass('show');
-	});
 
 	window.onload = function () {
 
