Add Tower image Add Gulp Server Add Dist Images Add Dist Stylesheets

--- a/index.html
+++ b/index.html
@@ -30,8 +30,6 @@
 
 	});
 
-
-
 </script>
 
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?sensor=true"></script>
@@ -199,7 +197,7 @@
 
 				<h1>
 
-					<span class="text"><strong>OAI Telecom</strong></span>
+					<span><strong>OAI Telecom</strong></span>
 
 				</h1>
 
@@ -249,9 +247,9 @@
 
 </div>
 
-<span class="full-wide bg-cover photo"></span>
+<span class="full-wide bg-cover photo" style="background-image: url('dist/img/largePhotos/tower3_telecom.jpg'); background-position: center 24%; height: 24em; width: 100%; float: left;"></span>
 
-<div class="text font-grey-800">
+<div class="text grey-50 font-grey-800">
 
 	<div class="container">
 
