--- a/index.html
+++ b/index.html
@@ -535,6 +535,186 @@
 
 </article>
 
+<div id="contact" class="block grey-200 font-grey-800 flex align-center flex-column">
+
+	<style>
+
+		@font-face {
+			font-family: 'wtal';
+			src: url('dist/font/wtal.eot?67121696');
+			src: url('dist/font/wtal.eot?67121696#iefix') format('embedded-opentype'),
+			url('dist/font/wtal.woff?67121696') format('woff'),
+			url('dist/font/wtal.ttf?67121696') format('truetype'),
+			url('dist/font/wtal.svg?67121696#wtal') format('svg');
+			font-weight: normal;
+			font-style: normal;
+		}
+
+		@media screen and (-webkit-min-device-pixel-ratio:0) {
+			@font-face {
+				font-family: 'wtal';
+				src: url('dist/font/wtal.svg?67121696#wtal') format('svg');
+			}
+		}
+
+		[class^="icon-"]:before, [class*=" icon-"]:before {
+			display: inline-block;
+			font-family: "wtal";
+			font-style: normal;
+			font-variant: normal;
+			font-weight: normal;
+			margin-right: .2em;
+			speak: none;
+			text-align: center;
+			text-decoration: inherit;
+			text-transform: none;
+			width: 1em;
+			line-height: 1em;
+			margin-left: .2em;
+			-webkit-font-smoothing: antialiased;
+			-moz-osx-font-smoothing: grayscale;
+		}
+
+		.icon-mobile:before { content: '\e800'; } /* '' */
+		.icon-phone:before { content: '\e801'; } /* '' */
+		.icon-mail:before { content: '\e802'; } /* '' */
+		.icon-whatsapp:before { content: '\e803'; } /* '' */
+
+	</style>
+
+	<style>
+		h1,
+		h2 {
+			font-weight: 100;
+			margin: .5em 0 .5em;
+		}
+
+		* {
+			text-align: center;
+		}
+	</style>
+
+	<h1>Entre em contato</h1>
+
+	<style>
+
+		#contact {
+			padding: 3em 0 3.75em;
+		}
+
+		.contacts {
+			margin: 1em 0 1.5em;
+			max-width: 48em;
+			width: 100%;
+		}
+
+		.contacts .contact {
+			border-radius: 8px;
+			min-width: 16em;
+			padding: 1em 0;
+		}
+
+		.contacts .contact:hover {
+			background-color: #e0e0e0;
+			cursor: pointer;
+		}
+
+		.contacts .contact span {
+			margin: .3125em 0;
+		}
+
+		.contacts .contact [class^="icon-"]:before {
+			border: solid 2px #00bfa5;
+			color: #00bfa5;
+			border-radius: 50%;
+			font-size: 1.5em;
+			padding: 16px;
+		}
+
+		.contacts .contact:hover [class^="icon-"]:before {
+			background-color: #00bfa5;
+			color: #ffffff;
+		}
+
+		.contacts .contact .email,
+		.contacts .contact .number {
+			font-size: 1.125em;
+			font-weight: 700;
+			margin-bottom: 1px;
+		}
+
+		.contacts .contact .title {
+			margin-top: 0;
+			font-size: .875em;
+		}
+
+	</style>
+
+	<div class="contacts flex flex-row flex-wrap justify-around width-100">
+		<div class="contact flex flex-column align-center">
+			<span class="icon-phone"></span>
+			<span class="number">18 3421 2000</span>
+			<span class="title">Assis</span>
+		</div>
+		<a href="mailto:webtal@webtal.com.br" class="contact flex flex-column align-center">
+			<span class="icon-phone"></span>
+			<span class="email">18 3351 9500</span>
+			<span class="title">Palmital</span>
+		</a>
+		<div class="contact flex flex-column align-center">
+			<span class="icon-phone"></span>
+			<span class="number">11 2626 3000</span>
+			<span class="title">São Paulo</span>
+		</div>
+		<div class="contact flex flex-column align-center">
+			<span class="icon-phone"></span>
+			<span class="number">0800 722 7998</span>
+			<span class="title">Demais localidades</span>
+		</div>
+	</div>
+
+	<h2>Horários de atendimento</h2>
+
+	<style scoped="scoped">
+
+		.office-hours {
+			max-width: 24em;
+			width: 100%;
+		}
+
+		.office-hours .office-hour {
+			border: solid 2px #00bfa5;
+			border-radius: 8px;
+			padding: 1em;
+			margin: 1em 0;
+			text-align: center;
+			cursor: pointer;
+		}
+
+		.office-hours .office-hour span {
+			width: 100%;
+			text-align: center;
+		}
+
+		.office-hours .office-hour .days {
+			font-size: 2.5em;
+		}
+
+	</style>
+
+	<div class="office-hours flex width-100 justify-around flex-wrap">
+		<div class="office-hour flex flex-column align-center hfont-white h-teal-a700">
+			<span class="days">Seg/Sex</span>
+			<span class="hour">08:00 até 18:00</span>
+		</div>
+		<div class="office-hour flex flex-column align-center hfont-white h-teal-a700">
+			<span class="days">Sábado</span>
+			<span class="hour">08:00 até 13:00</span>
+		</div>
+	</div>
+
+</div>
+
 <style>
 
 	.homologation {
