--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
 					<div class="OfficeItemTimetable">
 
 						<p>Seg a Sex 08h as 18h</p>
-						<p>Sázbado 08 as 13h</p>
+						<p>Sábado 08 as 13h</p>
 
 					</div>
 
@@ -583,7 +583,7 @@
 					<div class="OfficeItemTimetable">
 
 						<p>Seg a Sex 08h as 18h</p>
-						<p>Sázbado 08 as 13h</p>
+						<p>Sábado 08 as 13h</p>
 
 					</div>
 
