--- a/teste.html
+++ b/teste.html
@@ -194,6 +194,14 @@
                                    x-moz-errormessage="Ops, o campo nome deve ser preenchido corretamente :)"/>
                         </div>
 
+                        <div class="name-wrapper flex justify-start">
+                            <label class="phone" for="cPhone">Nome: </label>
+                            <input class="phone-text" type="text" size="13" name="tPhone" id="cPhone" maxlength="50"
+                                   placeholder="Telefone" required
+                                   title="Ops, o campo telefone deve ser preenchido corretamente :)"
+                                   x-moz-errormessage="Ops, o campo telefone deve ser preenchido corretamente :)"/>
+                        </div>
+
                         <div class="email-wrapper flex justify-start">
                             <label class="email" for="cEmail">Email: </label>
                             <input class="email-text" type="email" size="26" name="tEmail" id="cEmail" maxlength="60"
@@ -201,6 +209,23 @@
                                    title="EX: seunome@gmail.com"
                                    x-moz-errormessage="EX: seunome@gmail.com"/>
                         </div>
+
+                        <div class="name-wrapper flex justify-start">
+                            <label class="address" for="cAddress">Nome: </label>
+                            <input class="address-text" type="text" size="40" name="tAddress" id="cAddress" maxlength="40"
+                                   placeholder="Endereço Completo" required
+                                   title="Ops, o campo deve ser preenchido corretamente :)"
+                                   x-moz-errormessage="Ops, o campo deve ser preenchido corretamente :)"/>
+                        </div>
+
+                        <div class="name-wrapper flex justify-start">
+                            <label class="city" for="cCity">Nome: </label>
+                            <input class="city-text" type="text" size="20" name="tCity" id="cCity" maxlength="30"
+                                   placeholder="Cidade" required
+                                   title="Ops, o campo cidade deve ser preenchido corretamente :)"
+                                   x-moz-errormessage="Ops, o campo cidade deve ser preenchido corretamente :)"/>
+                        </div>
+
                     </div>
 
                     <div class="message">
