--- a/index.html
+++ b/index.html
@@ -681,7 +681,7 @@
 			<span class="number">18 3421 2000</span>
 			<span class="title">Assis</span>
 		</div>
-		<a href="mailto:webtal@webtal.com.br" class="contact flex flex-column align-center">
+		<div class="contact flex flex-column align-center">
 			<span class="icon icon-phone"></span>
 			<span class="email">18 3351 9500</span>
 			<span class="title">Palmital</span>
