--- a/index.html
+++ b/index.html
@@ -599,9 +599,6 @@
 
 <div id="contact" class="block grey-200 font-grey-800 flex align-center flex-column">
 
-	<style>
-	</style>
-
 	<h1 class="font-light-blue-a700">Entre em contato</h1>
 
 	<style>
@@ -685,7 +682,7 @@
 			<span class="icon icon-phone"></span>
 			<span class="email">18 3351 9500</span>
 			<span class="title">Palmital</span>
-		</a>
+		</div>
 		<div class="contact flex flex-column align-center">
 			<span class="icon icon-phone"></span>
 			<span class="number">11 2626 3000</span>
@@ -744,6 +741,7 @@
 	</div>
 
 </div>
+
 
 <style>
 
@@ -986,6 +984,19 @@
 
 
 <footer class="block flex justify-around flex-wrap grey-900 font-grey-600 border-grey-600">
+
+	<div>
+
+		<p>Móvel<br/>
+
+			18 9 9749 2000 (Vivo)<br/>
+			18 9 9677 9500 (Vivo)<br/>
+			14 9 9705 9500 (Vivo)<br/>
+			14 9 9670 9500 (Vivo)<br/>
+			18 9 8105 3300 (Tim)</p>
+
+	</div>
+
 	<div class="about flex flex-column align-center">
 		<span class="address"></span>
 		<span class="copyright">©OAI TELECOM 2016</span>
